Simplified logic for allocation